@@ -1,7 +1,7 @@
 #/*! \page config_macros Default configuration: @RPMCONFIGDIR@/macros
 # \verbatim
 #
-# $Id: macros.in,v 1.127 2002/11/12 20:09:04 jbj Exp $
+# $Id: macros.in,v 1.128 2002/11/20 15:13:03 jbj Exp $
 #
 # This is a global RPM configuration file. All changes made here will
 # be lost when the rpm package is upgraded. Any per-system configuration
@@ -130,13 +130,12 @@ package or when debugging this package. \
 %_defaultdocdir		%{_usr}/doc
 
 #	Path to scripts to autogenerate package dependencies.
-%__find_provides	@FINDPROVIDES@
-%__find_requires	@FINDREQUIRES@
+%__find_provides	@RPMCONFIGDIR@/rpmdeps --provides
+%__find_requires	@RPMCONFIGDIR@/rpmdeps --requires
 #%__find_prereq		???
 #%__find_conflicts	???
 #%__find_obsoletes	???
 
-%__file_z_n		%{__file} -z -n -m @RPMCONFIGDIR@/magic
 %__perl_provides	@RPMCONFIGDIR@/perl.prov
 %__perl_requires	@RPMCONFIGDIR@/perl.req
 
